// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests Pages/Preferences/Node List NodeElement 1`] = `
<div>
  <div
    class="css-paub65-NodeContainer e1k5prvz2"
  >
    <div
      class="css-noe96r-NodeHeader e1k5prvz1"
    >
      <div
        class="css-1ivxpad-Circle e1k5prvz5"
      >
        <h6
          class="css-vdb9bk-Index e1k5prvz4 leafygreen-ui-19p3n10"
        >
          1
        </h6>
      </div>
      <h6
        class="css-b00ohd-NodeTitle e1k5prvz3 leafygreen-ui-19p3n10"
      >
        Download the Command-Line Client.
      </h6>
    </div>
    <div
      class="css-w6wgl7-ChildContainer e1k5prvz0"
    >
      <div
        style="width: 500px; height: 300px; background-color: red;"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Pages/Preferences/Node List NodeListFull 1`] = `
<div>
  <div
    style="position: relative;"
  >
    <div
      class="css-1oynna9-NodeContainer eb6wkmd0"
    >
      <div
        class="css-paub65-NodeContainer e1k5prvz2"
      >
        <div
          class="css-noe96r-NodeHeader e1k5prvz1"
        >
          <div
            class="css-1ivxpad-Circle e1k5prvz5"
          >
            <h6
              class="css-vdb9bk-Index e1k5prvz4 leafygreen-ui-19p3n10"
            >
              1
            </h6>
          </div>
          <h6
            class="css-b00ohd-NodeTitle e1k5prvz3 leafygreen-ui-19p3n10"
          >
            Download the Command-Line Client.
          </h6>
        </div>
        <div
          class="css-w6wgl7-ChildContainer e1k5prvz0"
        >
          <div
            style="width: 500px; height: 300px; background-color: red;"
          >
            Test
          </div>
        </div>
      </div>
      <div
        class="css-paub65-NodeContainer e1k5prvz2"
      >
        <div
          class="css-noe96r-NodeHeader e1k5prvz1"
        >
          <div
            class="css-1ivxpad-Circle e1k5prvz5"
          >
            <h6
              class="css-vdb9bk-Index e1k5prvz4 leafygreen-ui-19p3n10"
            >
              2
            </h6>
          </div>
          <h6
            class="css-b00ohd-NodeTitle e1k5prvz3 leafygreen-ui-19p3n10"
          >
            Move the command-line client to somewhere in your PATH. On many systems this will be /usr/local/bin.
          </h6>
        </div>
        <div
          class="css-w6wgl7-ChildContainer e1k5prvz0"
        >
          <div
            style="width: 500px; height: 300px; background-color: red;"
          >
            Test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
